# Minesweeper-Game

./: CMakeLists.txt  CMakeSettings.json  Minesweeper.sln
Minesweeper/: CMakeLists.txt  MSBoardTextView - Copy.cpp  MSBoardTextView.h  MSSFMLController.cpp  MSSFMLController.h  MSSFMLView - Copy.cpp  MSSFMLView.cpp  MSSFMLView.h  MSTextController1.cpp  MSTextController1.h  Minesweeper.vcxproj  Minesweeper.vcxproj.filters  SFMLGECICI.cpp  SFMLMainMenu.cpp  SFMLMainMenu.h  board - Copy.cpp  board - Copy.h  board.cpp  game.cpp  game.h  main.cpp  sfmlMain.cpp  sfmlMain.idl  sfmlMain.xaml
Minesweeper/Debug/: Minesweeper.vcxproj.MdMergeInputs.cache  Minesweeper.vcxproj.cppwinrt_comp.cache  Minesweeper.vcxproj.cppwinrt_comp.rsp  Minesweeper.vcxproj.cppwinrt_plat.rsp  Minesweeper.vcxproj.mdmerge.rsp  vc143.idb
Minesweeper/Debug/Generated Files/: module.g.cpp
Minesweeper/Debug/Merged/: Minesweeper.winmd
Minesweeper/Debug/Minesweeper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Minesweeper.lastbuildstate  midl-MIDLRT.write.1.tlog  midl.command.1.tlog  midl.read.1.tlog
Minesweeper/Debug/Unmerged/: sfmlMain.winmd
Minesweeper/x64/Debug/: Minesweeper.exe.recipe  Minesweeper.vcxproj.FileListAbsolute.txt  Minesweeper.vcxproj.MdMergeInputs.cache  Minesweeper.vcxproj.cppwinrt_comp.cache  Minesweeper.vcxproj.cppwinrt_comp.rsp  Minesweeper.vcxproj.mdmerge.rsp  board.obj.enc  vc143.idb
Minesweeper/x64/Release/: Minesweeper.exe.recipe  Minesweeper.iobj  Minesweeper.ipdb  Minesweeper.vcxproj.FileListAbsolute.txt  Minesweeper.vcxproj.MdMergeInputs.cache  (+3 more)
(+35 files in other folders)
